# lunar-o2-ilmenite-pareto-optimizer

./: README.md  pyproject.toml
docs/: methodology.md  validation_plan.md
examples/: stress_cases.json
results/: candidates.csv  pareto_frontier.json  summary.json
scripts/: run_trade_study.py
src/lunar_o2_ilmenite_optimizer/: __init__.py  candidates.py  model.py  pareto.py  robustness.py
tests/: test_trade_study.py
