[project]
license = "Apache-2.0"
name = "lunar-o2-ilmenite-pareto-optimizer"
version = "0.1.0"
description = "Pareto and robustness analysis for lunar oxygen extraction tradeoffs using ilmenite processing scenarios."
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

